--- a/css/museo.css
+++ b/css/museo.css
@@ -600,10 +600,186 @@
 
 }
 
+
+//cambiar
 @media (max-width: 489px) {
     .imagenUSA img {
         position: relative;
+        width: 23rem;
+    }
+
+    .miniCartelMapa {
+        font-size: 0.4rem;
+    }
+
+    .losAngeles {
+        top: -4rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .losAngelesPunto {
+        top: -7rem;
+        left: 0.5rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .lasVegas {
+        top: -8.2rem;
+        left: 1rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .lasVegasPunto {
+        top: -7.5rem;
+        left: 2rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .flagstaff {
+        top: -8.2rem;
+        left: 4.2rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .flagstaffPunto {
+        top: -7.6rem;
+        left: 4rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .alburquerque {
+        top: -5rem;
+        left: 4rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .alburquerquePunto {
+        top: -6.9rem;
+        left: 6.4rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .shamrock {
+        top: -7rem;
+        left: 7.9rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .shamrockPunto {
+        top: -6.4rem;
+        left: 7.8rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .oklahomaCity {
+        top: -4rem;
+        left: 9rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .oklahomaCityPunto {
+        top: -6.2rem;
+        left: 9.5rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .springfield {
+        top: -6rem;
+        left: 14rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .springfieldPunto {
+        top: -7.5rem;
+        left: 12.4rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+    .chicago {
+        top: -10rem;
+        left: 15rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .chicagoPunto {
+        top: -10.5rem;
+        left: 13rem;
+        font-size: 1.6rem;
+        color: orange;
+        animation: agrandarAchicar 1s infinite alternate, cambiarColor 1s infinite alternate;
+    }
+
+    .cartelAuto {
+        max-height: 4rem;
+        max-width: 4rem;
+        top: -15rem;
+        left: 10rem;
+    }
+
+    .banderaUSA {
+        max-height: 5rem;
+        max-width: 5rem;
+        top: -14rem;
+        left: -2rem;
+        transform: rotate(-30deg)
+    }
+
+    .cartelRuta66 {
+        max-height: 3rem;
+        max-width: 3rem;
+        top: -13rem;
+        left: 2rem;
+    }
+
+    .cajaTitulo {
+        max-width: 22rem;
+    }
+
+    .cajaTitulo h2 {
+        font-size: 1.5rem;
+    }
+
+    .cajaCiudadCelu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        background-color: white;
         width: 22rem;
+        height: 30rem;
+        border-radius: 2rem 2rem 2rem 2rem;
+        border: 0.1rem solid black;
+    }
+
+    .informacionCiudadChicago p {
+        font-size: 0.6rem;
+        max-width: 12rem;
+    }
+
+    .textoCelu {
+        font-size: 0.6rem;
+        max-width: 12rem;
+    }
+
+}
+
+@media (max-width: 470px) {
+    .imagenUSA img {
+        position: relative;
+        width: 23rem;
     }
 
     .miniCartelMapa {
