--- a/css/style.css
+++ b/css/style.css
@@ -6708,6 +6708,12 @@ nav a#pull {
   }
 }
 
+@media screen and (max-width:475px) {
+  .videoAuto {
+    height: 10rem;
+  }
+}
+
 @media screen and (max-width:414px) {
   .primerPagina h1 {
     font-size: 3rem;
@@ -6753,10 +6759,7 @@ nav a#pull {
   align-items: center;
 }
 
-.videoAuto h2 {
-  font-family: halloween;
-  color: white;
-}
+
 
 @media (max-width:621px) {
   .videoAuto h2 {
@@ -6784,4 +6787,8 @@ nav a#pull {
 .vp-center {
   display: none !important;
   height: 100%;
+}
+
+.espacio{
+  margin-top: 2rem;
 }
