--- a/css/museo.css
+++ b/css/museo.css
@@ -384,6 +384,14 @@
 }
 
 @media (max-width: 890px) {
+
+    .blanco {
+        color: white;
+        margin-left:0.3rem;
+        margin-right: 0.3rem;
+        margin-top: 1rem;
+    }
+
     .contenedor-galeria {
         display: none;
     }
@@ -397,29 +405,22 @@
         justify-content: center;
         align-items: center;
         flex-direction: row;
-        background-color: white;
-        width: 30rem;
-        height: 30rem;
+        width: 25rem;
+        height: 55rem;
         border-radius: 2rem 2rem 2rem 2rem;
-        border: 0.1rem solid black;
     }
 
     .infoCiudad {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
+        display: none;
     }
 
     .infoCiudad p {
-        display: flex;
+        display: none;
 
     }
 
     .textoCelu {
-        font-size: 0.7rem;
-        width: 14rem;
-        text-align: justify;
+        display: none;
     }
 
     .fotosCiudad {
@@ -427,18 +428,31 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        text-align: center;
+    }
+
+    .fotosCelu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #015d52;
+        border: 0.1rem solid black;
+        border-radius: 0.2rem 0.2rem 0.2rem 0.2rem;
+        text-align: center;
+        margin-bottom: 1rem;
+        width: 18rem;
     }
 
     .fotosCiudad img {
-        width: 7rem;
-        height: 7rem;
-        margin: 1rem;
+        width: 15rem;
+        height: 11rem;
+        margin: 0.5rem;
+        border: 0.5rem solid white;
     }
 
     .informacionCiudadChicago p {
-        width: 14rem !important;
-        font-size: 0.7rem;
-        text-align: justify;
+        display: none;
     }
 }
 
@@ -601,11 +615,10 @@
 }
 
 
-//cambiar
 @media (max-width: 489px) {
     .imagenUSA img {
         position: relative;
-        width: 23rem;
+        width: 26rem;
     }
 
     .miniCartelMapa {
@@ -613,110 +626,110 @@
     }
 
     .losAngeles {
-        top: -4rem;
+        top: -6rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .losAngelesPunto {
-        top: -7rem;
-        left: 0.5rem;
+        top: -8rem;
+        left: 1rem;
         font-size: 1.4rem;
         color: orange;
     }
 
 
     .lasVegas {
-        top: -8.2rem;
+        top: -9.2rem;
         left: 1rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .lasVegasPunto {
-        top: -7.5rem;
-        left: 2rem;
+        top: -8.7rem;
+        left: 2.7rem;
         font-size: 1.4rem;
         color: orange;
     }
 
 
     .flagstaff {
-        top: -8.2rem;
+        top: -9.2rem;
         left: 4.2rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .flagstaffPunto {
-        top: -7.6rem;
-        left: 4rem;
+        top: -8.7rem;
+        left: 5rem;
         font-size: 1.4rem;
         color: orange;
     }
 
 
     .alburquerque {
-        top: -5rem;
-        left: 4rem;
+        top: -6rem;
+        left: 5rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .alburquerquePunto {
-        top: -6.9rem;
-        left: 6.4rem;
+        top: -8.4rem;
+        left: 6.8rem;
         font-size: 1.4rem;
         color: orange;
     }
 
 
     .shamrock {
-        top: -7rem;
-        left: 7.9rem;
+        top: -8.5rem;
+        left: 9rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .shamrockPunto {
-        top: -6.4rem;
-        left: 7.8rem;
+        top: -7.3rem;
+        left: 9.4rem;
         font-size: 1.4rem;
         color: orange;
     }
 
 
     .oklahomaCity {
-        top: -4rem;
-        left: 9rem;
+        top: -5rem;
+        left: 11rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .oklahomaCityPunto {
-        top: -6.2rem;
-        left: 9.5rem;
+        top: -7.1rem;
+        left: 11.5rem;
         font-size: 1.4rem;
         color: orange;
     }
 
 
     .springfield {
-        top: -6rem;
-        left: 14rem;
+        top: -8rem;
+        left: 17rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .springfieldPunto {
-        top: -7.5rem;
-        left: 12.4rem;
+        top: -8.5rem;
+        left: 14.7rem;
         font-size: 1.4rem;
         color: orange;
     }
 
     .chicago {
-        top: -10rem;
+        top: -12.5rem;
         left: 15rem;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     .chicagoPunto {
-        top: -10.5rem;
-        left: 13rem;
+        top: -12rem;
+        left: 15.5rem;
         font-size: 1.6rem;
         color: orange;
         animation: agrandarAchicar 1s infinite alternate, cambiarColor 1s infinite alternate;
@@ -776,10 +789,184 @@
 
 }
 
-@media (max-width: 470px) {
+@media (max-width: 427px) {
     .imagenUSA img {
         position: relative;
-        width: 23rem;
+        width: 25rem;
+    }
+
+    .miniCartelMapa {
+        font-size: 0.4rem;
+    }
+
+    .losAngeles {
+        top: -6rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .losAngelesPunto {
+        top: -7.8rem;
+        left: 1rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .lasVegas {
+        top: -9.2rem;
+        left: 1rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .lasVegasPunto {
+        top: -8.6rem;
+        left: 2.6rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .flagstaff {
+        top: -9.2rem;
+        left: 4.2rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .flagstaffPunto {
+        top: -8.6rem;
+        left: 4.7rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .alburquerque {
+        top: -6rem;
+        left: 5rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .alburquerquePunto {
+        top: -8rem;
+        left: 6.8rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .shamrock {
+        top: -8rem;
+        left: 9rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .shamrockPunto {
+        top: -7rem;
+        left: 9rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .oklahomaCity {
+        top: -5rem;
+        left: 11rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .oklahomaCityPunto {
+        top: -7rem;
+        left: 11rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .springfield {
+        top: -8rem;
+        left: 17rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .springfieldPunto {
+        top: -8.3rem;
+        left: 14.1rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+    .chicago {
+        top: -12.5rem;
+        left: 15rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .chicagoPunto {
+        top: -11.7rem;
+        left: 15rem;
+        font-size: 1.6rem;
+        color: orange;
+        animation: agrandarAchicar 1s infinite alternate, cambiarColor 1s infinite alternate;
+    }
+
+    .cartelAuto {
+        max-height: 4rem;
+        max-width: 4rem;
+        top: -15rem;
+        left: 10rem;
+    }
+
+    .banderaUSA {
+        max-height: 5rem;
+        max-width: 5rem;
+        top: -14rem;
+        left: -2rem;
+        transform: rotate(-30deg)
+    }
+
+    .cartelRuta66 {
+        max-height: 3rem;
+        max-width: 3rem;
+        top: -13rem;
+        left: 2rem;
+    }
+
+    .cajaTitulo {
+        max-width: 22rem;
+    }
+
+    .cajaTitulo h2 {
+        font-size: 1.5rem;
+    }
+
+    .cajaCiudadCelu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        background-color: white;
+        width: 22rem;
+        height: 30rem;
+        border-radius: 2rem 2rem 2rem 2rem;
+        border: 0.1rem solid black;
+    }
+
+    .informacionCiudadChicago p {
+        font-size: 0.6rem;
+        max-width: 12rem;
+    }
+
+    .textoCelu {
+        font-size: 0.6rem;
+        max-width: 12rem;
+    }
+
+}
+
+@media (max-width: 405px) {
+    .imagenUSA img {
+        position: relative;
+        width: 22rem;
     }
 
     .miniCartelMapa {
@@ -797,7 +984,6 @@
         font-size: 1.4rem;
         color: orange;
     }
-
 
     .lasVegas {
         top: -8.2rem;
@@ -899,8 +1085,8 @@
     .cartelAuto {
         max-height: 4rem;
         max-width: 4rem;
-        top: -15rem;
-        left: 10rem;
+        top: -10rem;
+        left: 6rem;
     }
 
     .banderaUSA {
@@ -949,6 +1135,7 @@
     }
 
 }
+
 
 
 
