--- a/css/museo.css
+++ b/css/museo.css
@@ -376,7 +376,7 @@
         transform: rotate(30deg)
     }
 
-    
+
 }
 
 .cajaCiudadCelu {
@@ -387,7 +387,7 @@
 
     .blanco {
         color: white;
-        margin-left:0.3rem;
+        margin-left: 0.3rem;
         margin-right: 0.3rem;
         margin-top: 1rem;
     }
@@ -406,7 +406,7 @@
         align-items: center;
         flex-direction: row;
         width: 25rem;
-        height: 55rem;
+        height: 56rem;
         border-radius: 2rem 2rem 2rem 2rem;
     }
 
@@ -453,6 +453,56 @@
 
     .informacionCiudadChicago p {
         display: none;
+    }
+
+    .popup {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 30rem;
+        height: 21rem;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.8);
+        padding: 20px;
+        border: 2px solid #ccc;
+        z-index: 2;
+        text-align: center;
+        padding-top: 3rem;
+        opacity: 0; /* Inicialmente establece la opacidad a 0 para la animación */
+        animation: fadeIn 0.5s ease-in-out forwards; /* Agrega una animación de fadeIn con duración de 0.5 segundos */
+    }
+    /* Definición de la animación */
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+    .popup-image {
+        width: 100%;
+        height: auto;
+        border: 0.5rem solid white;
+    }
+
+    .popup-text {
+        margin-top: 10px;
+        color: white;
+    }
+
+    .close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        background-color: rgba(227, 0, 14, 1);
+        width: 30px;
     }
 }
 
@@ -607,9 +657,13 @@
         flex-direction: row;
         background-color: white;
         width: 25rem;
-        height: 30rem;
+        height: 57rem;
         border-radius: 2rem 2rem 2rem 2rem;
         border: 0.1rem solid black;
+    }
+
+    .popup {
+        width: 25rem;
     }
 
 }
@@ -772,7 +826,7 @@
         flex-direction: row;
         background-color: white;
         width: 22rem;
-        height: 30rem;
+        height: 57rem;
         border-radius: 2rem 2rem 2rem 2rem;
         border: 0.1rem solid black;
     }
@@ -946,7 +1000,7 @@
         flex-direction: row;
         background-color: white;
         width: 22rem;
-        height: 30rem;
+        height: 57rem;
         border-radius: 2rem 2rem 2rem 2rem;
         border: 0.1rem solid black;
     }
@@ -959,6 +1013,10 @@
     .textoCelu {
         font-size: 0.6rem;
         max-width: 12rem;
+    }
+
+    .popup {
+        width: 20rem;
     }
 
 }
@@ -1119,7 +1177,7 @@
         flex-direction: row;
         background-color: white;
         width: 22rem;
-        height: 30rem;
+        height: 57rem;
         border-radius: 2rem 2rem 2rem 2rem;
         border: 0.1rem solid black;
     }
