--- a/css/delivery.css
+++ b/css/delivery.css
@@ -12,11 +12,15 @@
     align-items: center;
     list-style: none;
     margin: 1rem;
-    
+}
+
+#menu {
+    background-color: brown;
 }
 
 .opcionesDelivery li {
     padding: 1rem;
+    width: 8rem;
 
 }
 
