--- a/css/delivery.css
+++ b/css/delivery.css
@@ -1,9 +1,19 @@
 .back {
-    background-image: url(../images/granero/lugar/delivery.jpg);
+    background-image: url(../images/granero/delivery/DSC_5005.JPG);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .imagenGrande {
     width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.cartelDelivery {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 1rem 1rem 1rem 1rem;
 }
 
 .opcionesDelivery {
@@ -119,6 +129,30 @@
     border-radius: 1rem 1rem 1rem 1rem;
 }
 
+.iconoWpp {
+    width: 4rem;
+    
+}
+
+.horizontal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    
+}
+
+.horizontal p {
+    padding: 1rem;
+}
+
+.wppFixed {
+    position: fixed;
+    right: 1.4rem;
+    bottom: 6rem;
+    z-index: 1002;
+}
+
 @media (max-width: 1288px) {
     .menu2 li{
         font-size: 0.9rem;
@@ -209,5 +243,10 @@
         height: 9rem;
     }
 
+}
+
+@media (max-width: 575px) {
+    
+    
 }
 
