--- a/css/style.css
+++ b/css/style.css
@@ -1909,7 +1909,8 @@ span.item-code {
     padding-top: 20px;
     background: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0)100%);
     background-size: cover;
-    box-shadow: 0 0 4rem rgba(0, 0, 0, 2);
+    box-shadow: 0 0 0 rgba(0, 0, 0, 2);
+    z-index: 1002;
   }
 }
 
@@ -6787,3 +6788,33 @@ nav a#pull {
   margin-top: 2rem;
 }
 
+.loader-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.loader {
+  width: 50px; /* Ajusta el tamaño inicial según sea necesario */
+  height: 50px; /* Ajusta el tamaño inicial según sea necesario */
+}
+
+.loader-img {
+  background: url('../images/granero/logos/minilogo.png') no-repeat center center;
+  background-size: contain;
+  animation: scaleInOut 2s ease-in-out infinite;
+}
+
+@keyframes scaleInOut {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+}
